--- a/cyber_eda.ipynb
+++ b/cyber_eda.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# importing the csv file\n",
-    "df = pd.read_csv(\"diana\\Downloads\\Cybersecurity EDA\", utf-8)"
+    "df = pd.read_csv(\"diana\\Downloads\\Cybersecurity EDA\\cyberattacks.xlsx\", utf-8)"
    ]
   }
  ],
