--- a/cyber_eda.ipynb
+++ b/cyber_eda.ipynb
@@ -21,6 +21,17 @@
     "# importing the csv file\n",
     "df = pd.read_csv(\"diana\\Downloads\\Cybersecurity EDA\\cyberattacks.xlsx\", utf-8)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Checked the data information\n",
+    "\n",
+    "df.info()"
+   ]
   }
  ],
  "metadata": {
