--- a/cyber_eda.ipynb
+++ b/cyber_eda.ipynb
@@ -77,6 +77,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info() # Dataset Information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data Cleaning\n",
+    "\n",
+    "df.isnull().sum()  # Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
