--- a/cyber_eda.ipynb
+++ b/cyber_eda.ipynb
@@ -106,7 +106,182 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.dropna(inplace=True)  # Handling Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize the distribution of attack types\n",
+    "\n",
+    "attack_counts = df['Attack Type'].value_counts()\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.barplot(x=attack_counts.index , y=attack_counts)\n",
+    "\n",
+    "plt.xlabel('Attack Type',fontsize=14, fontweight='bold')\n",
+    "plt.ylabel('Count',fontsize=14, fontweight='bold')\n",
+    "plt.title('Distribution of Attack Types', fontsize=16)\n",
+    "\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n",
+    "\n",
+    "print(attack_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data for the pie chart\n",
+    "\n",
+    "\n",
+    "labels = ['UDP', 'ICMP', 'TCP']\n",
+    "sizes = df['Protocol'].value_counts()  # Proportional sizes of each category\n",
+    "colors = ['red', 'green', 'blue']  # Color for each category segment\n",
+    "explode = (0.1, 0, 0)  # Explode a slice if needed (0 means no explosion)\n",
+    "\n",
+    "\n",
+    "# Create a pie chart\n",
+    "plt.pie(sizes, labels=labels, colors=colors, explode=explode, autopct='%1.1f%%', startangle=180)\n",
+    "\n",
+    "\n",
+    "plt.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
+    "plt.title('Distribution of Network Traffic Protocols')\n",
+    "\n",
+    "\n",
+    "# Display the pie chart\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data for the pie chart\n",
+    "\n",
+    "labels =['DNS','FTP','HTTP']\n",
+    "sizes = df['Traffic Type'].value_counts()\n",
+    "colors = ['yellow', 'green', 'orange']\n",
+    "explode = (0.1, 0, 0) \n",
+    "\n",
+    "# Create a pie chart\n",
+    "plt.pie(sizes, labels=labels, colors=colors, explode=explode, autopct='%1.1f%%', startangle=90)\n",
+    "\n",
+    "plt.axis('equal')  \n",
+    "plt.title('Distribution of Network Traffic Types')\n",
+    "\n",
+    "# Display the pie chart\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels =['Blocked','Ignored','Logged']\n",
+    "sizes =df['Action Taken'].value_counts()\n",
+    "colors = ['Red', 'green', 'blue']\n",
+    "explode = (0.1, 0, 0) \n",
+    "\n",
+    "\n",
+    "# Create a pie chart\n",
+    "plt.pie(sizes, labels=labels, colors=colors, explode=explode, autopct='%1.1f%%', startangle=190)\n",
+    "\n",
+    "plt.axis('equal')\n",
+    "plt.title('Distribution of Actions Taken')\n",
+    "\n",
+    "# Display the pie chart\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data for the pie chart\n",
+    "labels =['High','Medium','Low']\n",
+    "sizes =df['Severity Level'].value_counts()\n",
+    "colors = ['orange', 'blue','pink'] \n",
+    "explode = (0, 0,0)\n",
+    "\n",
+    "# Create a pie chart\n",
+    "plt.pie(sizes, labels=labels, colors=colors, explode=explode, autopct='%1.1f%%', startangle=90)\n",
+    "\n",
+    "plt.axis('equal') \n",
+    "plt.title('Distribution of Severity Levels')\n",
+    "\n",
+    "# Display the pie chart\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels =['Server','Firewall']\n",
+    "sizes =df['Log Source'].value_counts()  \n",
+    "colors = ['blue', 'orange']\n",
+    "explode = (0, 0) \n",
+    "\n",
+    "plt.pie(sizes, labels=labels, colors=colors, explode=explode, autopct='%1.1f%%', startangle=270)\n",
+    "\n",
+    "plt.axis('equal')\n",
+    "plt.title('Distribution of Log Sources')\n",
+    "\n",
+    "# Display the pie chart\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#list of columns \n",
+    "columns_to_plot = ['Protocol','Attack Signature','Action Taken','Network Segment']\n",
+    "\n",
+    "#plot a bar chart for each column\n",
+    "for col in columns_to_plot:\n",
+    "    sns.catplot(data=df, x=col, hue='Attack Type', kind='count', height=8, aspect=1.5)\n",
+    "    plt.title(f'Count of Attack Types for Each {col.capitalize()}')\n",
+    "    plt.show\n",
+    "\n",
+    "\n",
+    "# Reset the warning filter to default\n",
+    "warnings.filterwarnings(\"default\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#columns to plot\n",
+    "columns = ['Anomaly Scores','Source Port','Packet Length']\n",
+    "\n",
+    "#plotting box plot for each columns\n",
+    "for col in columns:\n",
+    "    sns.boxplot(data=df, x=col, hue='Attack Type')\n",
+    "    plt.title(f'Count of Attack Types for Each {col.capitalize()}')\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
