--- a/cyber_eda.ipynb
+++ b/cyber_eda.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,32 +69,342 @@
    "source": [
     "# Checked the data information\n",
     "\n",
-    "df.info()"
+    "df.info()\n",
+    "\n",
+    "data = pd.read_csv(file_path)\n",
+    "# Display basic information about the dataset\n",
+    "data_info = data.info()\n",
+    "data_head = data.head()\n",
+    "\n",
+    "data_info, data_head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Source IP Address</th>\n",
+       "      <th>Destination IP Address</th>\n",
+       "      <th>Source Port</th>\n",
+       "      <th>Destination Port</th>\n",
+       "      <th>Protocol</th>\n",
+       "      <th>Packet Length</th>\n",
+       "      <th>Packet Type</th>\n",
+       "      <th>Traffic Type</th>\n",
+       "      <th>Payload Data</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Action Taken</th>\n",
+       "      <th>Severity Level</th>\n",
+       "      <th>User Information</th>\n",
+       "      <th>Device Information</th>\n",
+       "      <th>Network Segment</th>\n",
+       "      <th>Geo-location Data</th>\n",
+       "      <th>Proxy Information</th>\n",
+       "      <th>Firewall Logs</th>\n",
+       "      <th>IDS/IPS Alerts</th>\n",
+       "      <th>Log Source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5/30/2023 6:33</td>\n",
+       "      <td>103.216.15.12</td>\n",
+       "      <td>84.9.164.252</td>\n",
+       "      <td>31225</td>\n",
+       "      <td>17616</td>\n",
+       "      <td>ICMP</td>\n",
+       "      <td>503</td>\n",
+       "      <td>Data</td>\n",
+       "      <td>HTTP</td>\n",
+       "      <td>Qui natus odio asperiores nam. Optio nobis ius...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Logged</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Reyansh Dugal</td>\n",
+       "      <td>Mozilla/5.0 (compatible; MSIE 8.0; Windows NT ...</td>\n",
+       "      <td>Segment A</td>\n",
+       "      <td>Jamshedpur, Sikkim</td>\n",
+       "      <td>150.9.97.135</td>\n",
+       "      <td>Log Data</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Server</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8/26/2020 7:08</td>\n",
+       "      <td>78.199.217.198</td>\n",
+       "      <td>66.191.137.154</td>\n",
+       "      <td>17245</td>\n",
+       "      <td>48166</td>\n",
+       "      <td>ICMP</td>\n",
+       "      <td>1174</td>\n",
+       "      <td>Data</td>\n",
+       "      <td>HTTP</td>\n",
+       "      <td>Aperiam quos modi officiis veritatis rem. Omni...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Blocked</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Sumer Rana</td>\n",
+       "      <td>Mozilla/5.0 (compatible; MSIE 8.0; Windows NT ...</td>\n",
+       "      <td>Segment B</td>\n",
+       "      <td>Bilaspur, Nagaland</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Log Data</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Firewall</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>11/13/2022 8:23</td>\n",
+       "      <td>63.79.210.48</td>\n",
+       "      <td>198.219.82.17</td>\n",
+       "      <td>16811</td>\n",
+       "      <td>53600</td>\n",
+       "      <td>UDP</td>\n",
+       "      <td>306</td>\n",
+       "      <td>Control</td>\n",
+       "      <td>HTTP</td>\n",
+       "      <td>Perferendis sapiente vitae soluta. Hic delectu...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Ignored</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Himmat Karpe</td>\n",
+       "      <td>Mozilla/5.0 (compatible; MSIE 9.0; Windows NT ...</td>\n",
+       "      <td>Segment C</td>\n",
+       "      <td>Bokaro, Rajasthan</td>\n",
+       "      <td>114.133.48.179</td>\n",
+       "      <td>Log Data</td>\n",
+       "      <td>Alert Data</td>\n",
+       "      <td>Firewall</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7/2/2023 10:38</td>\n",
+       "      <td>163.42.196.10</td>\n",
+       "      <td>101.228.192.255</td>\n",
+       "      <td>20018</td>\n",
+       "      <td>32534</td>\n",
+       "      <td>UDP</td>\n",
+       "      <td>385</td>\n",
+       "      <td>Data</td>\n",
+       "      <td>HTTP</td>\n",
+       "      <td>Totam maxime beatae expedita explicabo porro l...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Blocked</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>Fateh Kibe</td>\n",
+       "      <td>Mozilla/5.0 (Macintosh; PPC Mac OS X 10_11_5; ...</td>\n",
+       "      <td>Segment B</td>\n",
+       "      <td>Jaunpur, Rajasthan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alert Data</td>\n",
+       "      <td>Firewall</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7/16/2023 13:11</td>\n",
+       "      <td>71.166.185.76</td>\n",
+       "      <td>189.243.174.238</td>\n",
+       "      <td>6131</td>\n",
+       "      <td>26646</td>\n",
+       "      <td>TCP</td>\n",
+       "      <td>1462</td>\n",
+       "      <td>Data</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>Odit nesciunt dolorem nisi iste iusto. Animi v...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Blocked</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>Dhanush Chad</td>\n",
+       "      <td>Mozilla/5.0 (compatible; MSIE 5.0; Windows NT ...</td>\n",
+       "      <td>Segment C</td>\n",
+       "      <td>Anantapur, Tripura</td>\n",
+       "      <td>149.6.110.119</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alert Data</td>\n",
+       "      <td>Firewall</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Timestamp Source IP Address Destination IP Address  Source Port   \n",
+       "0   5/30/2023 6:33     103.216.15.12           84.9.164.252        31225  \\\n",
+       "1   8/26/2020 7:08    78.199.217.198         66.191.137.154        17245   \n",
+       "2  11/13/2022 8:23      63.79.210.48          198.219.82.17        16811   \n",
+       "3   7/2/2023 10:38     163.42.196.10        101.228.192.255        20018   \n",
+       "4  7/16/2023 13:11     71.166.185.76        189.243.174.238         6131   \n",
+       "\n",
+       "   Destination Port Protocol  Packet Length Packet Type Traffic Type   \n",
+       "0             17616     ICMP            503        Data         HTTP  \\\n",
+       "1             48166     ICMP           1174        Data         HTTP   \n",
+       "2             53600      UDP            306     Control         HTTP   \n",
+       "3             32534      UDP            385        Data         HTTP   \n",
+       "4             26646      TCP           1462        Data          DNS   \n",
+       "\n",
+       "                                        Payload Data  ... Action Taken   \n",
+       "0  Qui natus odio asperiores nam. Optio nobis ius...  ...       Logged  \\\n",
+       "1  Aperiam quos modi officiis veritatis rem. Omni...  ...      Blocked   \n",
+       "2  Perferendis sapiente vitae soluta. Hic delectu...  ...      Ignored   \n",
+       "3  Totam maxime beatae expedita explicabo porro l...  ...      Blocked   \n",
+       "4  Odit nesciunt dolorem nisi iste iusto. Animi v...  ...      Blocked   \n",
+       "\n",
+       "   Severity Level User Information   \n",
+       "0             Low    Reyansh Dugal  \\\n",
+       "1             Low       Sumer Rana   \n",
+       "2             Low     Himmat Karpe   \n",
+       "3          Medium       Fateh Kibe   \n",
+       "4             Low     Dhanush Chad   \n",
+       "\n",
+       "                                  Device Information Network Segment   \n",
+       "0  Mozilla/5.0 (compatible; MSIE 8.0; Windows NT ...       Segment A  \\\n",
+       "1  Mozilla/5.0 (compatible; MSIE 8.0; Windows NT ...       Segment B   \n",
+       "2  Mozilla/5.0 (compatible; MSIE 9.0; Windows NT ...       Segment C   \n",
+       "3  Mozilla/5.0 (Macintosh; PPC Mac OS X 10_11_5; ...       Segment B   \n",
+       "4  Mozilla/5.0 (compatible; MSIE 5.0; Windows NT ...       Segment C   \n",
+       "\n",
+       "    Geo-location Data Proxy Information Firewall Logs IDS/IPS Alerts   \n",
+       "0  Jamshedpur, Sikkim      150.9.97.135      Log Data            NaN  \\\n",
+       "1  Bilaspur, Nagaland               NaN      Log Data            NaN   \n",
+       "2   Bokaro, Rajasthan    114.133.48.179      Log Data     Alert Data   \n",
+       "3  Jaunpur, Rajasthan               NaN           NaN     Alert Data   \n",
+       "4  Anantapur, Tripura     149.6.110.119           NaN     Alert Data   \n",
+       "\n",
+       "  Log Source  \n",
+       "0     Server  \n",
+       "1   Firewall  \n",
+       "2   Firewall  \n",
+       "3   Firewall  \n",
+       "4   Firewall  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1237 entries, 2 to 39956\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Timestamp               1237 non-null   object \n",
+      " 1   Source IP Address       1237 non-null   object \n",
+      " 2   Destination IP Address  1237 non-null   object \n",
+      " 3   Source Port             1237 non-null   int64  \n",
+      " 4   Destination Port        1237 non-null   int64  \n",
+      " 5   Protocol                1237 non-null   object \n",
+      " 6   Packet Length           1237 non-null   int64  \n",
+      " 7   Packet Type             1237 non-null   object \n",
+      " 8   Traffic Type            1237 non-null   object \n",
+      " 9   Payload Data            1237 non-null   object \n",
+      " 10  Malware Indicators      1237 non-null   object \n",
+      " 11  Anomaly Scores          1237 non-null   float64\n",
+      " 12  Alerts/Warnings         1237 non-null   object \n",
+      " 13  Attack Type             1237 non-null   object \n",
+      " 14  Attack Signature        1237 non-null   object \n",
+      " 15  Action Taken            1237 non-null   object \n",
+      " 16  Severity Level          1237 non-null   object \n",
+      " 17  User Information        1237 non-null   object \n",
+      " 18  Device Information      1237 non-null   object \n",
+      " 19  Network Segment         1237 non-null   object \n",
+      " 20  Geo-location Data       1237 non-null   object \n",
+      " 21  Proxy Information       1237 non-null   object \n",
+      " 22  Firewall Logs           1237 non-null   object \n",
+      " 23  IDS/IPS Alerts          1237 non-null   object \n",
+      " 24  Log Source              1237 non-null   object \n",
+      "dtypes: float64(1), int64(3), object(21)\n",
+      "memory usage: 251.3+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "df.info() # Dataset Information"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp                 0\n",
+       "Source IP Address         0\n",
+       "Destination IP Address    0\n",
+       "Source Port               0\n",
+       "Destination Port          0\n",
+       "Protocol                  0\n",
+       "Packet Length             0\n",
+       "Packet Type               0\n",
+       "Traffic Type              0\n",
+       "Payload Data              0\n",
+       "Malware Indicators        0\n",
+       "Anomaly Scores            0\n",
+       "Alerts/Warnings           0\n",
+       "Attack Type               0\n",
+       "Attack Signature          0\n",
+       "Action Taken              0\n",
+       "Severity Level            0\n",
+       "User Information          0\n",
+       "Device Information        0\n",
+       "Network Segment           0\n",
+       "Geo-location Data         0\n",
+       "Proxy Information         0\n",
+       "Firewall Logs             0\n",
+       "IDS/IPS Alerts            0\n",
+       "Log Source                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Data Cleaning\n",
     "\n",
@@ -103,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,9 +422,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mDianaM23\\cyber_eda\\cyber_eda.ipynb Cell 8\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Visualize the distribution of attack types\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=2'>3</a>\u001b[0m attack_counts \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39m\u001b[39mAttack Type\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=4'>5</a>\u001b[0m plt\u001b[39m.\u001b[39mfigure(figsize\u001b[39m=\u001b[39m(\u001b[39m10\u001b[39m, \u001b[39m5\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=5'>6</a>\u001b[0m sns\u001b[39m.\u001b[39mbarplot(x\u001b[39m=\u001b[39mattack_counts\u001b[39m.\u001b[39mindex , y\u001b[39m=\u001b[39mattack_counts)\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=7'>8</a>\u001b[0m plt\u001b[39m.\u001b[39mxlabel(\u001b[39m'\u001b[39m\u001b[39mAttack Type\u001b[39m\u001b[39m'\u001b[39m,fontsize\u001b[39m=\u001b[39m\u001b[39m14\u001b[39m, fontweight\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbold\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Visualize the distribution of attack types\n",
     "\n",
