--- a/cyber_eda.ipynb
+++ b/cyber_eda.ipynb
@@ -9,7 +9,9 @@
     "#Importing required libraries\n",
     "import os\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -24,48 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 40000 entries, 0 to 39999\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column                  Non-Null Count  Dtype  \n",
-      "---  ------                  --------------  -----  \n",
-      " 0   Timestamp               40000 non-null  object \n",
-      " 1   Source IP Address       40000 non-null  object \n",
-      " 2   Destination IP Address  40000 non-null  object \n",
-      " 3   Source Port             40000 non-null  int64  \n",
-      " 4   Destination Port        40000 non-null  int64  \n",
-      " 5   Protocol                40000 non-null  object \n",
-      " 6   Packet Length           40000 non-null  int64  \n",
-      " 7   Packet Type             40000 non-null  object \n",
-      " 8   Traffic Type            40000 non-null  object \n",
-      " 9   Payload Data            40000 non-null  object \n",
-      " 10  Malware Indicators      20000 non-null  object \n",
-      " 11  Anomaly Scores          40000 non-null  float64\n",
-      " 12  Alerts/Warnings         19933 non-null  object \n",
-      " 13  Attack Type             40000 non-null  object \n",
-      " 14  Attack Signature        40000 non-null  object \n",
-      " 15  Action Taken            40000 non-null  object \n",
-      " 16  Severity Level          40000 non-null  object \n",
-      " 17  User Information        40000 non-null  object \n",
-      " 18  Device Information      40000 non-null  object \n",
-      " 19  Network Segment         40000 non-null  object \n",
-      " 20  Geo-location Data       40000 non-null  object \n",
-      " 21  Proxy Information       20149 non-null  object \n",
-      " 22  Firewall Logs           20039 non-null  object \n",
-      " 23  IDS/IPS Alerts          19950 non-null  object \n",
-      " 24  Log Source              40000 non-null  object \n",
-      "dtypes: float64(1), int64(3), object(21)\n",
-      "memory usage: 7.6+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Checked the data information\n",
     "\n",
