--- a/cyber_eda.ipynb
+++ b/cyber_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 40000 entries, 0 to 39999\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Timestamp               40000 non-null  object \n",
+      " 1   Source IP Address       40000 non-null  object \n",
+      " 2   Destination IP Address  40000 non-null  object \n",
+      " 3   Source Port             40000 non-null  int64  \n",
+      " 4   Destination Port        40000 non-null  int64  \n",
+      " 5   Protocol                40000 non-null  object \n",
+      " 6   Packet Length           40000 non-null  int64  \n",
+      " 7   Packet Type             40000 non-null  object \n",
+      " 8   Traffic Type            40000 non-null  object \n",
+      " 9   Payload Data            40000 non-null  object \n",
+      " 10  Malware Indicators      20000 non-null  object \n",
+      " 11  Anomaly Scores          40000 non-null  float64\n",
+      " 12  Alerts/Warnings         19933 non-null  object \n",
+      " 13  Attack Type             40000 non-null  object \n",
+      " 14  Attack Signature        40000 non-null  object \n",
+      " 15  Action Taken            40000 non-null  object \n",
+      " 16  Severity Level          40000 non-null  object \n",
+      " 17  User Information        40000 non-null  object \n",
+      " 18  Device Information      40000 non-null  object \n",
+      " 19  Network Segment         40000 non-null  object \n",
+      " 20  Geo-location Data       40000 non-null  object \n",
+      " 21  Proxy Information       20149 non-null  object \n",
+      " 22  Firewall Logs           20039 non-null  object \n",
+      " 23  IDS/IPS Alerts          19950 non-null  object \n",
+      " 24  Log Source              40000 non-null  object \n",
+      "dtypes: float64(1), int64(3), object(21)\n",
+      "memory usage: 7.6+ MB\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'file_path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mDianaM23\\cyber_eda\\cyber_eda.ipynb Cell 3\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X52sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Checked the data information\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X52sdnNjb2RlLXZmcw%3D%3D?line=2'>3</a>\u001b[0m df\u001b[39m.\u001b[39minfo()\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X52sdnNjb2RlLXZmcw%3D%3D?line=4'>5</a>\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(file_path)\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X52sdnNjb2RlLXZmcw%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Display basic information about the dataset\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X52sdnNjb2RlLXZmcw%3D%3D?line=6'>7</a>\u001b[0m data_info \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39minfo()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'file_path' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Checked the data information\n",
     "\n",
     "df.info()\n",
     "\n",
-    "data = pd.read_csv(file_path)\n",
+    "data = pd.read_csv(r'C:\\Users\\diana\\Downloads\\Cybersecurity EDA\\cyberattacks.csv')\n",
     "# Display basic information about the dataset\n",
     "data_info = data.info()\n",
     "data_head = data.head()\n",
@@ -44,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +435,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mDianaM23\\cyber_eda\\cyber_eda.ipynb Cell 8\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#Y101sdnNjb2RlLXZmcw%3D%3D?line=1'>2</a>\u001b[0m sns\u001b[39m.\u001b[39mset_style(\u001b[39m\"\u001b[39m\u001b[39mwhitegrid\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#Y101sdnNjb2RlLXZmcw%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# 1. Descriptive Statistics for numerical columns\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#Y101sdnNjb2RlLXZmcw%3D%3D?line=4'>5</a>\u001b[0m desc_stats \u001b[39m=\u001b[39m data\u001b[39m.\u001b[39mdescribe()\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#Y101sdnNjb2RlLXZmcw%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# 2. Frequency Counts for some categorical columns\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#Y101sdnNjb2RlLXZmcw%3D%3D?line=7'>8</a>\u001b[0m protocol_counts \u001b[39m=\u001b[39m data[\u001b[39m'\u001b[39m\u001b[39mProtocol\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Setting the aesthetics for plots\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "# 1. Descriptive Statistics for numerical columns\n",
+    "desc_stats = data.describe()\n",
+    "\n",
+    "# 2. Frequency Counts for some categorical columns\n",
+    "protocol_counts = data['Protocol'].value_counts()\n",
+    "attack_type_counts = data['Attack Type'].value_counts()\n",
+    "severity_level_counts = data['Severity Level'].value_counts()\n",
+    "\n",
+    "# 3. Temporal Analysis: Converting timestamp to datetime and extracting year for trend analysis\n",
+    "data['Timestamp'] = pd.to_datetime(data['Timestamp'])\n",
+    "data['Year'] = data['Timestamp'].dt.year\n",
+    "attacks_per_year = data['Year'].value_counts().sort_index()\n",
+    "\n",
+    "# Plotting the frequency of attacks per year\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "attacks_per_year.plot(kind='bar')\n",
+    "plt.title('Frequency of Attacks Per Year')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Number of Attacks')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n",
+    "\n",
+    "desc_stats, protocol_counts.head(), attack_type_counts.head(), severity_level_counts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +491,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mDianaM23\\cyber_eda\\cyber_eda.ipynb Cell 8\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Visualize the distribution of attack types\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=2'>3</a>\u001b[0m attack_counts \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39m\u001b[39mAttack Type\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=4'>5</a>\u001b[0m plt\u001b[39m.\u001b[39mfigure(figsize\u001b[39m=\u001b[39m(\u001b[39m10\u001b[39m, \u001b[39m5\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=5'>6</a>\u001b[0m sns\u001b[39m.\u001b[39mbarplot(x\u001b[39m=\u001b[39mattack_counts\u001b[39m.\u001b[39mindex , y\u001b[39m=\u001b[39mattack_counts)\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X35sdnNjb2RlLXZmcw%3D%3D?line=7'>8</a>\u001b[0m plt\u001b[39m.\u001b[39mxlabel(\u001b[39m'\u001b[39m\u001b[39mAttack Type\u001b[39m\u001b[39m'\u001b[39m,fontsize\u001b[39m=\u001b[39m\u001b[39m14\u001b[39m, fontweight\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbold\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32mDianaM23\\cyber_eda\\cyber_eda.ipynb Cell 8\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X60sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Visualize the distribution of attack types\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X60sdnNjb2RlLXZmcw%3D%3D?line=2'>3</a>\u001b[0m attack_counts \u001b[39m=\u001b[39m df[\u001b[39m'\u001b[39m\u001b[39mAttack Type\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X60sdnNjb2RlLXZmcw%3D%3D?line=4'>5</a>\u001b[0m plt\u001b[39m.\u001b[39mfigure(figsize\u001b[39m=\u001b[39m(\u001b[39m10\u001b[39m, \u001b[39m5\u001b[39m))\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X60sdnNjb2RlLXZmcw%3D%3D?line=5'>6</a>\u001b[0m sns\u001b[39m.\u001b[39mbarplot(x\u001b[39m=\u001b[39mattack_counts\u001b[39m.\u001b[39mindex , y\u001b[39m=\u001b[39mattack_counts)\n\u001b[0;32m      <a href='vscode-notebook-cell://github/DianaM23/cyber_eda/cyber_eda.ipynb#X60sdnNjb2RlLXZmcw%3D%3D?line=7'>8</a>\u001b[0m plt\u001b[39m.\u001b[39mxlabel(\u001b[39m'\u001b[39m\u001b[39mAttack Type\u001b[39m\u001b[39m'\u001b[39m,fontsize\u001b[39m=\u001b[39m\u001b[39m14\u001b[39m, fontweight\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbold\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
      ]
     }
